# nanoref

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  cli-json.op.tsx  deny.toml  esto.d.ts  tsconfig.esto.json
.github/workflows/: ci.yaml  release-plz.yaml
examples/backend/: api.py  db.py
examples/config/: app.yaml
examples/docs/: adr-003-connection-pool.md  known-issues.md  postmortem-2024-11-15.md
examples/tests/: test_api.py
scripts/: subcommands.rs
src/: check.rs  checksum.rs  ls.rs  main.rs  mint.rs  search.rs
tasks/: check.md  ls.md  mint.md
tests/: integration.rs
