[package]
name = "nanoref"
version = "0.1.0"
edition = "2021"
description = "Database-free information linking using global references"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kantord/nanoref"
readme = "README.md"
keywords = ["references", "linking", "grep", "markers", "cross-reference"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nref"
path = "src/main.rs"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
anyhow      = "1"
owo-colors  = "4"
clap        = { version = "4", features = ["derive"] }
ignore      = "0.4"
grep-matcher  = "0.1"
grep-regex    = "0.1"
grep-searcher = "0.1"
nanoid        = "0.4"
serde_json    = "1"
sha2          = "0.10"

[lints.rust]
dead_code = "deny"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
cognitive_complexity = "deny"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
proptest    = "1"
tempfile    = "3"
